Working on Javascript

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <path d="M7.667 12.667A5.333 5.333 0 107.667 2a5.333 5.333 0 000 10.667zM14.334 14l-2.9-2.9" stroke="currentColor" stroke-width="1.333" stroke-linecap="round" stroke-linejoin="round"></path>
                     </svg>
                 </button>
-                <input class="input" placeholder="Search Movies" required="" type="text">
+                <input class="input" placeholder="Search Movies" required="" type="text" onchange="onSearchChange(event)">
                 <button class="reset" type="reset">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
@@ -59,14 +59,20 @@
     
     
     <section class="results">
-        <div class="movie__profile">
-            <figure class="movie__poster--wrapper">
-                <img src="https://m.media-amazon.com/images/M/MV5BNGE0YTVjNzUtNzJjOS00NGNlLTgxMzctZTY4YTE1Y2Y1ZTU4XkEyXkFqcGc@._V1_SX300.jpg" alt="" class="movie__poster--img">
-            </figure>
-            <h2 class="movie__title">The Avengers</h2>
-            <h3 class="movie__year">Theatrical Release: 2012</h3>
-            <h3 class="movie__type">Movie</h3>
-            <a href="https://www.imdb.com/title/tt0848228/" target="_blank" class="movie__imdb click">IMDB</a>
+        <div class="movie-list">
+            <div class="movie">
+                <div class="movie__profile">
+                    <figure class="movie__poster--wrapper">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg?20200913095930" alt="" class="movie__poster--img">
+                    </figure>
+                    <h2 class="movie__title">Movie Title</h2>
+                    <h3 class="movie__year">Theatrical Release: 2026</h3>
+                    <h3 class="movie__type">Movie</h3>
+                    <form action="https://www.imdb.com/title/tt0848228/" target="_blank">
+                        <input class ="movie__imdb click"  type="submit" value="IMDB" />
+                    </form>
+                </div>
+            </div>
         </div>
     </section>
 
