--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
             </figure>
 
             <div class="search__wrapper">
-                <select class="filter__sort" id="filter">
+                <select class="filter__sort" id = "movie" onchange="filterMedia(event)">
                     <option value="" disabled selected>Sort</option>
                     <option value="NEWEST_FIRST">Newest First</option>
                     <option value="OLDEST_FIRST">Oldest First</option>
-                    <option value="A_TO_Z">A to Z</option>
-                    <option value="Z_TO_A">Z to A</option>
+                    <option value="A_TO_Z">Alphabetical</option>
+                    <option value="Z_TO_A">Reverse Alphabetical</option>
                 </select>
 
-        
-            <form class="form">
-                <button>
+
+            <form class="form" onsubmit="onSearchChange(event); return false;">
+                <button type="submit">
                     <svg width="17" height="16" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="search">
                         <path d="M7.667 12.667A5.333 5.333 0 107.667 2a5.333 5.333 0 000 10.667zM14.334 14l-2.9-2.9" stroke="currentColor" stroke-width="1.333" stroke-linecap="round" stroke-linejoin="round"></path>
                     </svg>
                 </button>
-                <input class="input" placeholder="Search Movies" required="" type="text" onchange="onSearchChange(event)">
-                <button class="reset" type="search">
+                <input class="input" placeholder="Search Movies" required="" type="text">
+                <button class="reset" type="reset">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
                     </svg>
@@ -63,22 +63,22 @@
             <div class="movie">
                 <div class="movie__profile">
                     <figure class="movie__poster--wrapper">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg?20200913095930" alt="" class="movie__poster--img">
-                    </figure>
-                    <h2 class="movie__title">Movie Title</h2>
-                    <h3 class="movie__year">Theatrical Release: 2026</h3>
-                    <h3 class="movie__type">Movie</h3>
-                    <form action="https://www.imdb.com/title/tt0848228/?" target="_blank">
-                        <input class ="movie__imdb click"  type="submit" value="IMDB" />
-                    </form>
+                <img src="https://i.pinimg.com/736x/e4/8b/e9/e48be9eb6925c896f5bf9dc8c54c2a21.jpg" alt="" onerror="this.onerror = null; this.src = '${posterUrl}'" class="movie__poster--img">
+            </figure>
+                    <h2>Welcome to Movie Database! Search for movies using the search bar!</h2>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer>
-
-    </footer>
+    <div class="footer">
+        <figure>
+                <h1 class="logo">Movie Database</h1>
+            </figure>
+        <footer id="footer__copyright">
+            <p class = "footer__copyright">© 2026 Orlando Castillo. All rights reserved.</p>
+        </footer>
+    </div>
 
 </body>
 </html>
