--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
     <section class="results">
         <div class="movie-list">
             <div class="movie">
-                <div class="movie__profile">
-                    <figure class="movie__poster--wrapper">
-                <img src="https://i.pinimg.com/736x/e4/8b/e9/e48be9eb6925c896f5bf9dc8c54c2a21.jpg" alt="" onerror="this.onerror = null; this.src = '${posterUrl}'" class="movie__poster--img">
-            </figure>
+                <div class="movie__initial--img">
+                    
+                <img src="./assets/clapperboard-film-clip-art-dymo-cliparts-758df47cc87ec6092697f35ca8fe2546.png" alt="" onerror="this.onerror = null; this.src = '${posterUrl}'" class="movie__poster--img">
+                    
                     <h2>Welcome to Movie Database! Search for movies using the search bar!</h2>
                 </div>
             </div>
@@ -82,4 +82,6 @@
 
 </body>
 </html>
+
+
 
